--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,10 @@
   <groupId>com.matao</groupId>
   <artifactId>matao-utils</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  
+   <properties>
+	   <spring.version>5.1.5.RELEASE</spring.version>
+	  	<commons-lang3.version>3.3.2</commons-lang3.version>
+  </properties>
   
   <dependencies>
   	<dependency>
@@ -11,5 +14,68 @@
   		<artifactId>junit</artifactId>
   		<version>4.12</version>
   	</dependency>
+  	<dependency>
+  		<groupId>commons-codec</groupId>
+  		<artifactId>commons-codec</artifactId>
+  		<version>1.5</version>
+  			<!-- 依赖的公共包 -->
+		
+  	</dependency>
+  	<!-- spring 及springMVC -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<!-- 引用版本 -->
+			<version>${spring.version}</version>
+		</dependency>
+		
+		<!-- 加载上下文环境 -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		
+		<!-- 实例化Bean工厂 -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-beans</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		
+		<!-- web 容器 -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		
+		<!-- MVC 框架 -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		
+		<!-- 数据库的连接 -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+
+		<!-- 事务管理 -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-tx</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		
+		<!-- 上下文的支持 -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
   </dependencies>
 </project>
